Avoid scrollbars on Windows/Linux
Use auto scrolling to only show scrollbars when necessary, and unbreak
the horizontal scrolling which was only working on touch devices.
Correct positioning of the score when the scrollbars take more space
than the title itself.

--- a/res/main.scss
+++ b/res/main.scss
@@ -47,16 +47,16 @@ body {
 	padding: .25rem 0;
 }
 .card-header .score {
-	padding: .75rem .5rem .75rem .5rem;
+    cursor: default;
 }
 
 .card-header-title {
-	overflow: scroll;
+	overflow: auto;
 	white-space: nowrap;
 }
 
 .ellipsized-title {
-	overflow: hidden;
+	overflow: auto;
 	text-overflow: ellipsis;
 }
 
